# BrewMan

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  version.yml
res/app/: cia.rsf
src/: AppItem.cpp  AppItem.hpp  AppList.cpp  AppList.hpp  AssetManager.hpp  BrewMan.cpp  BrewMan.hpp  Download.cpp  Download.hpp  DownloadQueue.cpp  DownloadQueue.hpp  Installer.cpp  Installer.hpp  Notification.cpp  Notification.hpp  TweenObjects.hpp  Util.cpp  Util.hpp  boot.c  boot.h  main.cpp  version.h
src/GUI/: Button.cpp  Button.hpp  NinePatch.cpp  NinePatch.hpp  Tab.cpp  Tab.hpp  TabSet.cpp  TabSet.hpp
src/States/: BrowseState.cpp  BrowseState.hpp  LoadingState.cpp  LoadingState.hpp  State.cpp  State.hpp  StateIdentifiers.hpp  StateStack.cpp  StateStack.hpp  SyncState.cpp  SyncState.hpp  TitleState.cpp  TitleState.hpp
